# eyrc2023_CL_2703

./: .gitmodules
.github/workflows/: main.yml
cl2703/: CMakeLists.txt  package.xml
cl2703/launch/: task3b.launch.py  task4c.launch.py
cl2703/scripts/: __init__.py  config_utils.py  laser_utils.py  task1a.py  task1b.py  task1c.py  task2a.py  task2b.py  task3a.py  task3b.py  task4a.py  task4b.py  task4c.py  task5.py
ebot_docking/scripts/: ebot_docking_boilerplate.py  ebot_docking_service_task2b.py
ebot_docking/srv/: DockSw.srv
ebot_nav2/config/: ekf.yaml  mapper_params_online_async.yaml
ebot_nav2/launch/: ebot_bringup_launch.py
ebot_nav2/maps/: map.pgm
ebot_nav2/params/: nav2_params.yaml
ur5_moveit/: .setup_assistant  package.xml
ur_description/: CMakeLists.txt
ur_description/scripts/: task1a.py  task1b.py  task1c.py  task2a.py  task2b.py  task3a.py
